fix dark mode II

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -866,7 +866,7 @@ span.MuiBottomNavigationAction-label{
 
 
 .switch{
-    margin-top: 180px;
+    margin-top: 90px;
 }
 
 
@@ -1057,6 +1057,10 @@ span.MuiBottomNavigationAction-label{
 
     .blnkspn p{
         font-size: 57px;
+    }
+
+    .switch{
+        margin-top: 280px;
     }
     
 
